<resources>
    <string name="app_name">Meditation</string>

    //MainActivity
    <string name="main_activity_title">Start your journey</string>
    <string name="main_activity_text">Finding your inner peace is something that should be done 5-10 minutes every day. It will help you grow and relieve you from stress. Now open your mind, clear your head and lets go!</string>
    <string name="main_activity_button_text">Press to let your journey begin</string>
    <string name="main_activity_first_side_icon_text">FIND YOUR INNER PEACE</string>
    <string name="main_activity_second_side_icon_text">CLEAR YOUR HEAD</string>


    //FirstActivity
    <string name="first_activity_title">Meditate</string>
    <string name="first_activity_text">Focus on breathing in an out. Breath in from the mouth and out of your nose. Try t relax and keep your mind clear. Do this for 3-5 minutes. </string>

    //SecondActivity
    <string name="second_activity_title">Silence</string>
    <string name="second_activity_text">Turn off every electronic device and surrond yourself with the silence and listen to your inner self.</string>

    //ThirdActivity
    <string name="third_activity_title">Go walking</string>
    <string name="third_activity_text">Take you headphones and head out to the nature for a relaxing walk.</string>

    //FourthActivity
    <string name="fourth_activity_title">Yoga</string>
    <string name="fourth_activity_text">Now I want you to do five yoga exercises. Take the time you need and do not forget to breath slowly.</string>

    //FifthActivity
    <string name="fifth_activity_title">Tea time</string>
    <string name="fifth_activity_text">We all now that a cup of tea is both good for your body and mental state. Now I want you to go make a cup of tea with and enjoy a relaxing time with either a book or in front of the tv.</string>

    //SixthActivity
    <string name="sixth_activity_title">Taking notes</string>
    <string name="sixth_activity_text">Focus on what makes you happy and write down three of those things. Place the note in your pocket and be sure to always bring it with you.</string>

    //SeventhActivity
    <string name="seventh_activity_title">Thank somebody</string>
    <string name="seventh_activity_text">Who makes you happy? Who brings you the most joy? Why not say thank you to that person?</string>

    //EightActivity
    <string name="eight_activity_title">Read a book</string>
    <string name="eight_activity_text">Pick up your favorite book and lose yourself in its fantasy world!</string>

    //NineActivity
    <string name="nine_activity_title">Write</string>
    <string name="nine_activity_text">Writing is one way to handle stress and is  both stimulating for your brain and may help you relieve stress and anxiety!</string>

    //TenthActivity
    <string name="tenth_activity_title">Play</string>
    <string name="tenth_activity_text">Play is a wonderful way to unwind! Play is anything that is purposeless and pleasurable. Go out to throw a Frisbee or go to the zoo, anything that is fun for you. </string>

    //EleventhActivity
    <string name="eleventh_activity_title">Be in nature</string>
    <string name="eleventh_activity_text">Head outside and “sit on a bench or a blanket and let your mind get quiet” while you engage all your senses. Engaging your senses is a powerful way to relax. What do you see, hear and smell?</string>

    //TwelfthActivity
    <string name="twelfth_activity_title">Set goals</string>
    <string name="twelfth_activity_text">Setting yourself goals and challenges, whether at work or outside, such as learning a new language or training, can help you switch off from the high pressures in life and build your confidence.</string>

    //ThirteenActivity
    <string name="thirteen_activity_title">Exercise</string>
    <string name="thirteen_activity_text">Exercise is one of the most important things you can do to combat stress.People who exercise regularly are less likely to experience anxiety than those who dont exercise.</string>

    //FourteenActivity
    <string name="fourteen_activity_title">Have company</string>
    <string name="fourteen_activity_text">Solitude and silence can be the ultimate way to relax. For others, there is nothing more diverting than enjoying the company of your loved ones. Whether they provide a distraction or they help you.</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Meditation</string>
    <string name="title_notifications">Profile</string>

    //Start activity
    <string name="meditation_exercise">Meditation exercise</string>
    <string name="pitch_text">Find your inner peace and learn to grow to a stronger human being.</string>
    <string name="my_lessons_title">My lessons</string>
    <string name="music_button">Your first steps</string>
    <string name="subscribe_button">Subscribe now!</string>
    <string name="top_title">Everyday Mantra</string>

    //First activity
    <string name="next_exercise">NEXT EXERCISE</string>

    //Subscription activity
    <string name="subscription">Start your subscription today and get access to tons of more content!</string>

    //Countdown activity
    <string name="subscription_title">Find your inner peace</string>
    <string name="subscription_text">Loose yourself with you inner thaughts and lets meditate until timer stops.</string>


    <string name="enter_minutes">Minutes!</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="timer">00:00:00</string>

    //facebook login
    <string name="facebook_app_id">2417878584893510</string>
    <string name="fb_login_protocol_scheme">fb2417878584893510</string>


</resources>
